--- a/canvas/多人角色头像合成/index.html
+++ b/canvas/多人角色头像合成/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>多人角色头像合成</title>
-  <link rel="stylesheet" href="./index.css">
-  <style>
-    
-  </style>
+  <meta charset="UTF-8" />
+  <title>多人头像模板合成</title>
+  <link rel="stylesheet" href="./index.css" />
+  <script src="https://cdn.jsdelivr.net/npm/fabric@5.3.0/dist/fabric.min.js"></script>
 </head>
 <body>
-  <h2>多人角色头像合成</h2>
-
   <div class="avatar-section">
     <img src="./imgs/avatar1.webp" class="avatar" alt="">
     <img src="./imgs/avatar2.webp" class="avatar" alt="">
     <img src="./imgs/avatar3.webp" class="avatar" alt="">
-    <img src="./imgs/avatar4.webp" class="avatar" alt="">
     <img src="./imgs/avatar5.webp" class="avatar" alt="">
   </div>
 
-  <div class="template-section" id="templateSection"></div>
-  <script src="./index.js"></script>
+  <div id="templateSection" class="template-section"></div>
+
+ <div class="canvas-section">
+     <canvas id="avatarCanvas" width="150" height="150"></canvas>
+ </div>
+
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
