--- a/canvas/5.签名板.html
+++ b/canvas/5.签名板.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>Canvas 签字板（可保存）</title>
+<title>Canvas 签字板</title>
 <style>
   body {
     display: flex;
