--- a/canvas/2.风车-图形组合.html
+++ b/canvas/2.风车-图形组合.html
@@ -26,13 +26,20 @@
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
 
-    // 高分屏适配
-    const dpr = window.devicePixelRatio || 1;
-    canvas.width = 400 * dpr;
-    canvas.height = 400 * dpr;
-    canvas.style.width = "400px";
-    canvas.style.height = "400px";
-    ctx.scale(dpr, dpr);
+    const LOGICAL_WIDTH = 400;
+    const LOGICAL_HEIGHT = 400;
+
+    // ✅ 高分屏适配
+    function scaleCanvas() {
+      const dpr = window.devicePixelRatio || 1;
+      canvas.width = LOGICAL_WIDTH * dpr;
+      canvas.height = LOGICAL_HEIGHT * dpr;
+      canvas.style.width = LOGICAL_WIDTH + "px";
+      canvas.style.height = LOGICAL_HEIGHT + "px";
+      ctx.scale(dpr,dpr);
+    }
+
+    scaleCanvas();
 
     const cx = 200;
     const cy = 200;
