--- a/canvas/0.Hello Canvas.html
+++ b/canvas/0.Hello Canvas.html
@@ -1,73 +1,70 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+    <head>
+        <meta charset="UTF-8" />
+        <title>0. Hello Canvas</title>
+        <style>
+            body {
+                background: #f9f9f9;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: system-ui, sans-serif;
+            }
 
-<head>
-  <meta charset="UTF-8" />
-  <title>0. Hello Canvas</title>
-  <style>
-    body {
-      background: #f9f9f9;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-family: system-ui, sans-serif;
-    }
+            #canvas {
+                border: 1px solid #ccc;
+                background: #fff;
+                margin-top: 20px;
+                /* width: 900px;
+                height: 600px; */
+            }
 
-    #canvas {
-      border: 1px solid #ccc;
-      background: #fff;
-      margin-top: 20px;
-      /* width: 900px;
-      height: 600px; */
-    }
+            #coords {
+                margin-top: 10px;
+                font-size: 14px;
+                color: #333;
+            }
+        </style>
+    </head>
 
-    #coords {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #333;
-    }
-  </style>
-</head>
+    <body>
+        <h2>Canvas 坐标系演示</h2>
+        <canvas id="canvas" width="600" height="400"></canvas>
+        <!-- <div id="coords">坐标：x=0, y=0</div> -->
 
-<body>
-  <h2>Canvas 坐标系演示</h2>
-  <canvas id="canvas" width="600" height="400"></canvas>
-  <!-- <div id="coords">坐标：x=0, y=0</div> -->
+        <script>
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
 
-  <script>
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
+            // 保存逻辑尺寸
+            const LOGICAL_WIDTH = 600;
+            const LOGICAL_HEIGHT = 400;
 
-    // 保存逻辑尺寸
-    const LOGICAL_WIDTH = 600;
-    const LOGICAL_HEIGHT = 400;
+            const coords = document.getElementById("coords");
 
-    const coords = document.getElementById("coords");
+            function scaleCanvas() {
+                const dpr = window.devicePixelRatio || 1;
 
-    function scaleCanvas() {
-      const dpr = window.devicePixelRatio || 1;
+                // 设置实际像素大小（物理像素）
+                canvas.width = LOGICAL_WIDTH * dpr;
+                canvas.height = LOGICAL_HEIGHT * dpr;
 
-      // 设置实际像素大小（物理像素）
-      canvas.width = LOGICAL_WIDTH * dpr;
-      canvas.height = LOGICAL_HEIGHT * dpr;
+                // 保持 CSS 尺寸（逻辑像素）
+                canvas.style.width = LOGICAL_WIDTH + "px";
+                canvas.style.height = LOGICAL_HEIGHT + "px";
 
-      // 保持 CSS 尺寸（逻辑像素）
-      canvas.style.width = LOGICAL_WIDTH + "px";
-      canvas.style.height = LOGICAL_HEIGHT + "px";
+                // 缩放绘图上下文，让逻辑像素对应 CSS 像素
+                ctx.scale(dpr, dpr);
+            }
 
-      // 缩放绘图上下文，让逻辑像素对应 CSS 像素
-      ctx.scale(dpr,dpr)
-    }      
+            function drawFont() {
+                ctx.font = "36px 'Segoe UI'";
+                ctx.fillText("Hello Canvas!", 160, 150);
+            }
 
-    function drawFont() {
-      ctx.font = "36px 'Segoe UI'";
-      ctx.fillText("Hello Canvas!", 160, 150);
-    }
-
-    scaleCanvas();
-    drawFont();
-
-  </script>
-</body>
-
+            scaleCanvas();
+            drawFont();
+        </script>
+    </body>
 </html>
