--- a/canvas/10.图片处理.html
+++ b/canvas/10.图片处理.html
@@ -1,123 +1,141 @@
 <!DOCTYPE html>
 <html lang="zh">
-<head>
-<meta charset="UTF-8">
-<title>Canvas 圆形裁剪 Demo</title>
-<style>
-  body {
-    font-family: sans-serif;
-    text-align: center;
-    padding: 20px;
-    background: #f9f9f9;
-  }
-  canvas {
-    border: 1px solid #ccc;
-    margin-top: 20px;
-  }
-  button {
-    margin: 5px;
-    padding: 8px 16px;
-    cursor: pointer;
-  }
-</style>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Canvas 圆形裁剪 Demo</title>
+        <style>
+            body {
+                font-family: sans-serif;
+                text-align: center;
+                padding: 20px;
+                background: #f9f9f9;
+            }
+            canvas {
+                border: 1px solid #ccc;
+                margin-top: 20px;
+            }
+            button {
+                margin: 5px;
+                padding: 8px 16px;
+                cursor: pointer;
+            }
+        </style>
+    </head>
+    <body>
+        <h2>Canvas 圆形裁剪 Demo</h2>
 
-<h2>Canvas 圆形裁剪 Demo</h2>
+        <div>
+            <button onclick="loadImage()">加载图片</button>
+            <button onclick="rotateImage()">旋转 15°</button>
+            <button onclick="cropCircle()">圆形裁剪</button>
+            <button onclick="grayscaleImage()">灰度化</button>
+            <button onclick="exportImage()">导出图片</button>
+        </div>
 
-<div>
-  <button onclick="loadImage()">加载图片</button>
-  <button onclick="rotateImage()">旋转 15°</button>
-  <button onclick="cropCircle()">圆形裁剪</button>
-  <button onclick="grayscaleImage()">灰度化</button>
-  <button onclick="exportImage()">导出图片</button>
-</div>
+        <canvas id="myCanvas" width="600" height="400"></canvas>
 
-<canvas id="myCanvas" width="600" height="400"></canvas>
+        <script>
+            const canvas = document.getElementById("myCanvas");
+            const ctx = canvas.getContext("2d");
 
-<script>
-const canvas = document.getElementById('myCanvas');
-const ctx = canvas.getContext('2d');
+            let img = new Image();
+            let angle = 0;
 
-let img = new Image();
-let angle = 0;
+            // 图片显示在画布中央，尺寸占画布1/3
+            let displayWidth = canvas.width / 3;
+            let displayHeight = canvas.height / 3;
+            const centerX = canvas.width / 2;
+            const centerY = canvas.height / 2;
 
-// 图片显示在画布中央，尺寸占画布1/3
-let displayWidth = canvas.width / 3;
-let displayHeight = canvas.height / 3;
-const centerX = canvas.width / 2;
-const centerY = canvas.height / 2;
+            // 1. 加载图片
+            function loadImage() {
+                img.src = "./data/scenery.jpg";
+                img.crossOrigin = "Anonymous";
+                img.onload = () => {
+                    angle = 0;
+                    drawImageAtCenter();
+                };
+            }
 
-// 1. 加载图片
-function loadImage() {
-  img.src = './data/scenery.jpg';
-  img.crossOrigin = "Anonymous";
-  img.onload = () => {
-    angle = 0;
-    drawImageAtCenter();
-  };
-}
+            // 绘制图片到中央
+            function drawImageAtCenter() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.save();
+                ctx.translate(centerX, centerY);
+                ctx.rotate((angle * Math.PI) / 180);
+                ctx.drawImage(
+                    img,
+                    -displayWidth / 2,
+                    -displayHeight / 2,
+                    displayWidth,
+                    displayHeight
+                );
+                ctx.restore();
+            }
 
-// 绘制图片到中央
-function drawImageAtCenter() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.save();
-  ctx.translate(centerX, centerY);
-  ctx.rotate(angle * Math.PI / 180);
-  ctx.drawImage(img, -displayWidth/2, -displayHeight/2, displayWidth, displayHeight);
-  ctx.restore();
-}
+            // 2. 旋转图片
+            function rotateImage() {
+                if (!img.src) return alert("请先加载图片");
+                angle += 15;
+                drawImageAtCenter();
+            }
 
-// 2. 旋转图片
-function rotateImage() {
-  if (!img.src) return alert('请先加载图片');
-  angle += 15;
-  drawImageAtCenter();
-}
+            // 3. 圆形裁剪
+            function cropCircle() {
+                if (!img.src) return alert("请先加载图片");
 
-// 3. 圆形裁剪
-function cropCircle() {
-  if (!img.src) return alert('请先加载图片');
-  
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  ctx.save();
-  ctx.translate(centerX, centerY);
-  ctx.rotate(angle * Math.PI / 180);
-  
-  // 创建圆形裁剪区域
-  ctx.beginPath();
-  const radius = Math.min(displayWidth, displayHeight) / 2;
-  ctx.arc(0, 0, radius, 0, Math.PI * 2);
-  ctx.clip();
-  
-  // 绘制图片
-  ctx.drawImage(img, -displayWidth/2, -displayHeight/2, displayWidth, displayHeight);
-  ctx.restore();
-}
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.save();
+                ctx.translate(centerX, centerY);
+                ctx.rotate((angle * Math.PI) / 180);
 
-// 4. 灰度化处理
-function grayscaleImage() {
-  if (!img.src) return alert('请先加载图片');
-  const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-  const data = imageData.data;
-  
-  for (let i = 0; i < data.length; i += 4) {
-    const avg = (data[i] + data[i+1] + data[i+2]) / 3;
-    data[i] = data[i+1] = data[i+2] = avg;
-  }
-  
-  ctx.putImageData(imageData, 0, 0);
-}
+                // 创建圆形裁剪区域
+                ctx.beginPath();
+                const radius = Math.min(displayWidth, displayHeight) / 2;
+                ctx.arc(0, 0, radius, 0, Math.PI * 2);
+                // 创建裁剪区域，外面的都不要
+                ctx.clip();
 
-// 5. 导出图片
-function exportImage() {
-  const dataURL = canvas.toDataURL('image/png');
-  const a = document.createElement('a');
-  a.href = dataURL;
-  a.download = 'canvas_image.png';
-  a.click();
-}
-</script>
+                // 绘制图片
+                ctx.drawImage(
+                    img,
+                    -displayWidth / 2,
+                    -displayHeight / 2,
+                    displayWidth,
+                    displayHeight
+                );
+                ctx.restore();
+            }
 
-</body>
+            // 4. 灰度化处理
+            function grayscaleImage() {
+                if (!img.src) return alert("请先加载图片");
+                const imageData = ctx.getImageData(
+                    0,
+                    0,
+                    canvas.width,
+                    canvas.height
+                );
+                const data = imageData.data;
+
+                console.log({ data });
+
+                for (let i = 0; i < data.length; i += 4) {
+                    const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+                    data[i] = data[i + 1] = data[i + 2] = avg;
+                }
+
+                ctx.putImageData(imageData, 0, 0);
+            }
+
+            // 5. 导出图片
+            function exportImage() {
+                const dataURL = canvas.toDataURL("image/png");
+                const a = document.createElement("a");
+                a.href = dataURL;
+                a.download = "canvas_image.png";
+                a.click();
+            }
+        </script>
+    </body>
 </html>
