--- a/canvas/4.风车-坐标变换.html
+++ b/canvas/4.风车-坐标变换.html
@@ -1,85 +1,84 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <title>Canvas 静态风车示例</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-family: system-ui, sans-serif;
-      background: #f0f0f0;
-      padding: 40px;
-    }
-    canvas {
-      border: 1px solid #ccc;
-      background: #fff;
-    }
-  </style>
-</head>
-<body>
-  <h2>🎨 Canvas 静态风车</h2>
-  <canvas id="canvas" width="400" height="400"></canvas>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Canvas 静态风车示例</title>
+        <style>
+            body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: system-ui, sans-serif;
+                background: #f0f0f0;
+                padding: 40px;
+            }
+            canvas {
+                border: 1px solid #ccc;
+                background: #fff;
+            }
+        </style>
+    </head>
+    <body>
+        <h2>🎨 Canvas 静态风车</h2>
+        <canvas id="canvas" width="400" height="400"></canvas>
 
-  <script>
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
+        <script>
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
 
-    // 高分屏适配
-    const dpr = window.devicePixelRatio || 1;
-    canvas.width = 400 * dpr;
-    canvas.height = 400 * dpr;
-    canvas.style.width = "400px";
-    canvas.style.height = "400px";
-    ctx.scale(dpr, dpr);
+            // 高分屏适配
+            const dpr = window.devicePixelRatio || 1;
+            canvas.width = 400 * dpr;
+            canvas.height = 400 * dpr;
+            canvas.style.width = "400px";
+            canvas.style.height = "400px";
+            ctx.scale(dpr, dpr);
 
-    // 清空画布
-    ctx.clearRect(0,0,400,400);
+            // 清空画布
+            ctx.clearRect(0, 0, 400, 400);
 
-    // 坐标系中心
-    const cx = 200;
-    const cy = 200;
+            // 坐标系中心
+            const cx = 200;
+            const cy = 200;
 
-    // 绘制风车叶片
-    function drawBlade(color) {
-      ctx.fillStyle = color;
-      ctx.beginPath();
-      ctx.moveTo(0,0);
-      ctx.lineTo(80, -20);
-      ctx.lineTo(80, 20);
-      ctx.closePath();
-      ctx.fill();
-      ctx.strokeStyle = "#333";
-      ctx.lineWidth = 1;
-      ctx.stroke();
-    }
+            // 绘制风车叶片
+            function drawBlade(color) {
+                ctx.fillStyle = color;
+                ctx.beginPath();
+                ctx.moveTo(0, 0);
+                ctx.lineTo(80, -20);
+                ctx.lineTo(80, 20);
+                ctx.closePath();
+                ctx.fill();
+                ctx.strokeStyle = "#333";
+                ctx.lineWidth = 1;
+                ctx.stroke();
+            }
 
-    const colors = ["#ff4d4f","#ffa940","#73d13d","#40a9ff"];
+            const colors = ["#ff4d4f", "#ffa940", "#73d13d", "#40a9ff"];
 
-    // 保存状态 -> 平移到中心 -> 旋转 -> 绘制叶片 -> 恢复
-    for(let i=0;i<4;i++){
-      ctx.save();
-      ctx.translate(cx, cy);
-      ctx.rotate((i * Math.PI/2));
-      drawBlade(colors[i]);
-      ctx.restore();
-    }
+            // 保存状态 -> 平移到中心 -> 旋转 -> 绘制叶片 -> 恢复
+            for (let i = 0; i < 4; i++) {
+                ctx.save();
+                ctx.translate(cx, cy);
+                ctx.rotate((i * Math.PI) / 2);
+                drawBlade(colors[i]);
+                ctx.restore();
+            }
 
-    // 绘制风车轴
-    ctx.beginPath();
-    ctx.arc(cx, cy, 15, 0, Math.PI*2);
-    ctx.fillStyle = "#333";
-    ctx.fill();
+            // 绘制风车轴
+            ctx.beginPath();
+            ctx.arc(cx, cy, 15, 0, Math.PI * 2);
+            ctx.fillStyle = "#333";
+            ctx.fill();
 
-    // 绘制支架
-    ctx.beginPath();
-    ctx.moveTo(cx,cy+15);
-    ctx.lineTo(cx, 350);
-    ctx.lineWidth = 6;
-    ctx.strokeStyle = "#555";
-    ctx.stroke();
-
-  </script>
-</body>
+            // 绘制支架
+            ctx.beginPath();
+            ctx.moveTo(cx, cy + 15);
+            ctx.lineTo(cx, 350);
+            ctx.lineWidth = 6;
+            ctx.strokeStyle = "#555";
+            ctx.stroke();
+        </script>
+    </body>
 </html>
