--- a/canvas/7.动画-风车旋转.html
+++ b/canvas/7.动画-风车旋转.html
@@ -1,92 +1,92 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <title>Canvas 风车旋转示例</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-family: system-ui, sans-serif;
-      background: #f0f0f0;
-      padding: 40px;
-    }
-    canvas {
-      border: 1px solid #ccc;
-      background: #fff;
-    }
-  </style>
-</head>
-<body>
-  <h2>🎨 Canvas 风车旋转</h2>
-  <canvas id="canvas" width="400" height="400"></canvas>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Canvas 风车旋转示例</title>
+        <style>
+            body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                font-family: system-ui, sans-serif;
+                background: #f0f0f0;
+                padding: 40px;
+            }
+            canvas {
+                border: 1px solid #ccc;
+                background: #fff;
+            }
+        </style>
+    </head>
+    <body>
+        <h2>🎨 Canvas 风车旋转</h2>
+        <canvas id="canvas" width="400" height="400"></canvas>
 
-  <script>
-    const canvas = document.getElementById("canvas");
-    const ctx = canvas.getContext("2d");
+        <script>
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
 
-    // 高分屏适配
-    const dpr = window.devicePixelRatio || 1;
-    canvas.width = 400 * dpr;
-    canvas.height = 400 * dpr;
-    canvas.style.width = "400px";
-    canvas.style.height = "400px";
-    ctx.scale(dpr, dpr);
+            // 高分屏适配
+            const dpr = window.devicePixelRatio || 1;
+            canvas.width = 400 * dpr;
+            canvas.height = 400 * dpr;
+            canvas.style.width = "400px";
+            canvas.style.height = "400px";
+            ctx.scale(dpr, dpr);
 
-    const cx = 200;
-    const cy = 200;
+            const cx = 200;
+            const cy = 200;
 
-    function drawBlade(color) {
-      ctx.fillStyle = color;
-      ctx.beginPath();
-      ctx.moveTo(0,0);
-      ctx.lineTo(80, -20);
-      ctx.lineTo(80, 20);
-      ctx.closePath();
-      ctx.fill();
-      ctx.strokeStyle = "#333";
-      ctx.lineWidth = 1;
-      ctx.stroke();
-    }
+            function drawBlade(color) {
+                ctx.fillStyle = color;
+                ctx.beginPath();
+                ctx.moveTo(0, 0);
+                ctx.lineTo(80, -20);
+                ctx.lineTo(80, 20);
+                ctx.closePath();
+                ctx.fill();
+                ctx.strokeStyle = "#333";
+                ctx.lineWidth = 1;
+                ctx.stroke();
+            }
 
-    const colors = ["#ff4d4f","#ffa940","#73d13d","#40a9ff"];
-    let angle = 0; // 旋转角度
+            const colors = ["#ff4d4f", "#ffa940", "#73d13d", "#40a9ff"];
+            let angle = 0; // 旋转角度
 
-    function drawWindmill() {
-      ctx.clearRect(0,0,400,400);
+            function drawWindmill() {
+                ctx.clearRect(0, 0, 400, 400);
 
-      // 绘制旋转叶片
-      for(let i=0;i<4;i++){
-        ctx.save();
-        ctx.translate(cx, cy);
-        ctx.rotate(angle + i * Math.PI/2);
-        drawBlade(colors[i]);
-        ctx.restore();
-      }
+                // 绘制旋转叶片
+                for (let i = 0; i < 4; i++) {
+                    ctx.save();
+                    ctx.translate(cx, cy);
+                    ctx.rotate(angle + (i * Math.PI) / 2);
+                    drawBlade(colors[i]);
+                    ctx.restore();
+                }
 
-      // 风车轴
-      ctx.beginPath();
-      ctx.arc(cx, cy, 15, 0, Math.PI*2);
-      ctx.fillStyle = "#333";
-      ctx.fill();
+                // 风车轴
+                ctx.beginPath();
+                ctx.arc(cx, cy, 15, 0, Math.PI * 2);
+                ctx.fillStyle = "#333";
+                ctx.fill();
 
-      // 风车支架
-      ctx.beginPath();
-      ctx.moveTo(cx,cy+15);
-      ctx.lineTo(cx, 350);
-      ctx.lineWidth = 6;
-      ctx.strokeStyle = "#555";
-      ctx.stroke();
-    }
+                // 风车支架
+                ctx.beginPath();
+                ctx.moveTo(cx, cy + 15);
+                ctx.lineTo(cx, 350);
+                ctx.lineWidth = 6;
+                ctx.strokeStyle = "#555";
+                ctx.stroke();
+            }
 
-    function animate() {
-      angle += 0.02; // 每帧增加的角度
-      drawWindmill();
-      requestAnimationFrame(animate);
-    }
+            function animate() {
+                angle += 0.02; // 每帧增加的角度
+                drawWindmill();
+                requestAnimationFrame(animate);
+            }
 
-    animate(); // 启动动画
-  </script>
-</body>
+            animate(); // 启动动画
+        </script>
+    </body>
 </html>
